test/corpus/include-statement.txt
================================================================================
include statement
================================================================================

# Some header comment here. This is not an %include statement.
%include "file.cylc"
[some-section]
    %include "file2.cylc" # tabulation is ignored -> Is root-leveled.
[other-root] # a comment here ?!
    just a key = with a value

--------------------------------------------------------------------------------

(workflow_configuration
  (comment)
  (include_statement
    directive: (include_directive)
    path: (quoted_string
      (string_content)))
  (top_section
    name: (nametag))
  (include_statement
    directive: (include_directive)
    path: (quoted_string
      (string_content)))
  (comment)
  (top_section
    name: (nametag)
    (comment)
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (unquoted_string
        (string_content)))))
