test/corpus/multilines-strings.txt
===================
Multi-lines Strings
===================

[some-section]
    key = """
        This line
        is written
        over multiple lines
    """
    another-key = """What is 'the ''point then?!"""
[other-root]
    just a key = '''
        with a ''
        value
    '''

---

(workflow_configuration
  (top_section
    name: (nametag)
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (multiline_string
        (string_content)))
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (multiline_string
        (string_content))))
  (top_section
    name: (nametag)
    (setting
      key: (key)
      operator: (assignment_operator)
      value: (multiline_string
        (string_content)))))
